; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_vertexbuffer_flush_direct.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_vertexbuffer_flush_direct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 (i32*, %struct.gs_vb_data*)* }
%struct.gs_vb_data = type { i32 }

@.str = private unnamed_addr constant [29 x i8] c"gs_vertexbuffer_flush_direct\00", align 1
@thread_graphics = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gs_vertexbuffer_flush_direct(i32* %0, %struct.gs_vb_data* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.gs_vb_data*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.gs_vb_data* %1, %struct.gs_vb_data** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load %struct.gs_vb_data*, %struct.gs_vb_data** %4, align 8
  %7 = call i32 @gs_valid_p2(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32* %5, %struct.gs_vb_data* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  br label %18

10:                                               ; preds = %2
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** @thread_graphics, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32 (i32*, %struct.gs_vb_data*)*, i32 (i32*, %struct.gs_vb_data*)** %13, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = load %struct.gs_vb_data*, %struct.gs_vb_data** %4, align 8
  %17 = call i32 %14(i32* %15, %struct.gs_vb_data* %16)
  br label %18

18:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @gs_valid_p2(i8*, i32*, %struct.gs_vb_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
